--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,8 +32,10 @@ body {
   max-width: 36vw;
 }
 #CCdescription {
-  max-width: 34vw;
-  max-height: 34vh;
+margin-top: 1vh;
+ width: 70%;
+ height: auto;
+
 }
 // Headings
 h1,
@@ -47,16 +49,16 @@ h3 {
   }
 
   &.sm-heading {
-    margin-bottom: 2rem;
-    padding: 0.5rem 0rem 0rem 0.5rem;
-    background: rgba(lighten($primary-color, 2), 0.3);
+    // margin-bottom: 2vh;
+    // padding: 0.5rem 0rem 0rem 0.5rem;
+    background: rgba(lighten($primary-color, 2), 0.4);
     // border: darken($border-color, 30) 1px solid;
   }
 }
 
 #h2-head {
   font-family: Kabel;
-  font-size: 2.5rem;
+  font-size: 3rem;
   display: grid;
   grid-gap: 20px;
 
@@ -133,12 +135,12 @@ main {
 .p-bio {
   // font-family: Arial, Helvetica, sans-serif;
   font-family: handmade;
-  font-size: 2em;
+  font-size: 2.5em;
 }
 
 .about-info {
   display: grid;
-  grid-gap: 20px;
+  // grid-gap: 20px;
 
   grid-template-areas:
     "bioimage bio bio bio"
@@ -146,15 +148,25 @@ main {
   grid-template-columns: repeat(4, 2fr);
 }
 
-.bio-image,
-.bio-image1 {
+.bio-image {
   grid-area: bioimage;
-  height: 300px;
-  max-width: 300px;
-  margin: inherit;
-  margin-top: 24px;
+  width: 70%;
+  height: auto;
+  /// height: 300px;
+  /// max-width: 300px;
+  // margin: inherit;
+  margin-top: 4vh;
   // border-radius: 20%;
   // border: $border-color 3px solid;
+}
+.bio-image1 {
+  grid-area: bioimage;
+  width: 70%;
+  height: auto;
+  /// height: 300px;
+  /// max-width: 300px;
+  // margin: inherit;
+  // margin-top: 4vh;
 }
 
 .bio {
